# funplugin

./: .gitignore  README.md  go.mod  go.sum  go_plugin.go  go_plugin_test.go  hashicorp_plugin.go  hashicorp_plugin_test.go  init.go  plugin.go  pyproject.toml
.github/workflows/: unittest.yml
docs/: CHANGELOG.md  go-grpc-plugin.md  go-plugin.md  go-rpc-plugin.md  python-grpc-plugin.md
fungo/: grpc.go  init.go  plugin.go  rpc.go  utils.go  utils_test.go
fungo/examples/: hashicorp.go
fungo/protoGen/: debugtalk.pb.go
funppy/: __init__.py  debugtalk_pb2_grpc.py  plugin.py
funppy/examples/: debugtalk.py
go/: config.go  go.mod  go_plugin.go  go_plugin_test.go  grpc.go  hashicorp_plugin.go  hashicorp_plugin_test.go  init.go  interface.go  plugin.go  rpc.go  utils.go  utils_test.go
go/examples/: hashicorp.go
go/proto/: debugtalk.pb.go  debugtalk_grpc.pb.go
go/protoGen/: debugtalk_grpc.pb.go
myexec/: cmd.go  cmd_test.go  cmd_uixt.go  cmd_uixt_test.go  cmd_windows.go  cmd_windows_test.go
proto/: README.md  debugtalk.proto
python/: debugtalk_pb2.py  plugin.py
python/examples/: debugtalk.py
shared/: config.go  interface.go  logger.go  utils.go  utils_test.go  utils_unix.go  utils_windows.go
