[tool.poetry]
name = "funppy"
version = "0.3.0"
description = "Python plugin over gRPC for funplugin"
license = "Apache-2.0"
authors = ["debugtalk <mail@debugtalk.com>"]
repository = "https://github.com/httprunner/funplugin"

[tool.poetry.dependencies]
python = "^3.6"
grpcio = "^1.44.0"
grpcio-tools = "^1.44.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
